--- a/anaVinocur_etapa2.html
+++ b/anaVinocur_etapa2.html
@@ -8,35 +8,35 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/styleAnasDesplegadas.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
+        <!-- Start VideoLightBox.com HEAD section -->
         <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-            <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-            <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-            <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
         <!-- End VideoLightBox.com HEAD section --></head>
     <style>
         #etapa2{
             margin-top:100px;
         }
 
-        </style>
+    </style>
 
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
                 <img id="MenuIcon" src="Header/menu_icon.png" />
@@ -45,89 +45,103 @@
 
 
 
-        </header>
-     </div>
-    <div class="FondoAnaFrank">
-        <img src="fotosAnaCollage/annefrank1.png">
-    </div>
+            </header>
+        </div>
+        <div class="FondoAnaFrank">
+            <img src="fotosAnaCollage/annefrank1.png">
+        </div>
 
-    <div id="container">
+        <div id="container">
 
-        <div class="Nombre">
-            <b>ANA VINOCUR</b>
-            <div id="btnVolver">
-              <a href="etapa_nazismo_al_poder.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
+            <div class="Nombre">
+                <b>ANA VINOCUR</b>
+                <div id="btnVolver">
+                    <a href="etapa_nazismo_al_poder.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
+                </div>
             </div>
+
+
+            <div id="etapa2">
+
+                <div class="ImagenPrincipal2">
+                    <img src="EtapaAnas/grandeVincour.png">
+                </div>
+                <div class="ImagenesPequenas">
+                    <img class="imagenP" src="EtapaAnas/chica1.png">
+                    <div class="imagenPequena2">
+                        <img class ="imagenP" src="EtapaAnas/chica2.png">
+                    </div>
+                    <div class="imagenRectangulo">
+                        <img class="imagenR" src="EtapaAnas/rectangulo.jpg">
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div id="ImagenPequena">
+                    <img id="foto" src="EtapaAnas/circulo.png">
+                    <div id="DivDescr">
+                        <b id="Descr">Los alemanes ocupan Polonia.</b>
+                    </div>
+
+                </div>
+                <div id="Texto">
+                    <b id="Titulo"></b>
+                    <b class="hechos">Cuando  los nazis ocuparon Polonia en 1939 tomaron medidas discriminatorias hac&iacute;a los jud&iacute;os.
+                        Su propia amiga de la escuela  p&uacute;blica le hizo sentir esa discriminaci&oacute;n &#58; &ldquo;No tienes patria&rdquo; &#45; le dijo. <br>
+
+
+                        Ana se sinti&oacute; desconcertada.
+
+
+                        <br><br>      <b id="text"> &ldquo;&#46;&#46;&#46;El hermoso d&iacute;a de primavera pareci&oacute; nublarse de pronto. Hasta ahora yo me consideraba una ni&ntilde;a feliz, pero desde que escuch&eacute; a mi amiga Walka, ya no era la misma&#46;&#46;&#46;&rdquo;</b></b>
+
+
+                </div>
+            </div>
+            <div id="Seccion1">
+        </div>
+        <div id="Explicacion">
+            <b id="TextoGrande">&ldquo;&#46;&#46;&#46;Se ve gente asustada. De muchos hogares salen muchachos para alistarse en el ej&eacute;rcito. Los jud&iacute;os tambi&eacute;n se alistan. La gente se despide con angustia. Todos caminan, corren y hasta las hojas de los &aacute;rboles se quieren escapar m&aacute;s r&aacute;pido&#46;&#46;&#46;&rdquo;
+                <br></b>
+        </div>
+        <div id="Explicacion2">
+            <b id="Autor"> <br></b>
+        </div>
+        <div id="Seccion2">
+        </div>
         </div>
 
 
-<div id="etapa2">
 
-             <div class="ImagenPrincipal2">
-                <img src="EtapaAnas/grandeVincour.png">
-            </div>
-            <div class="ImagenesPequenas">
-                <img class="imagenP" src="EtapaAnas/chica1.png">
-                <div class="imagenPequena2">
-                <img class ="imagenP" src="EtapaAnas/chica2.png">
-                </div>
-                <div class="imagenRectangulo">
-                    <img class="imagenR" src="EtapaAnas/rectangulo.jpg">
-                </div>
-            </div>
-       <div class="clearfix"></div>
-        <div id="ImagenPequena">
-            <img id="foto" src="EtapaAnas/circulo.png">
-            <div id="DivDescr">
-            <b id="Descr">Los alemanes ocupan Polonia.</b>
-            </div>
-
-        </div>
-        <div id="Texto">
-            <b id="Titulo"></b>
-            <b class="hechos">Cuando  los nazis ocuparon Polonia en 1939 tomaron medidas discriminatorias hac&iacute;a los jud&iacute;os.
-Su propia amiga de la escuela  p&uacute;blica le hizo sentir esa discriminaci&oacute;n &#58; &ldquo;No tienes patria&rdquo; &#45; le dijo. <br>
-
-
-Ana se sinti&oacute; desconcertada.
-
-
-        <br><br>      <b id="text"> &ldquo;&#46;&#46;&#46;El hermoso d&iacute;a de primavera pareci&oacute; nublarse de pronto. Hasta ahora yo me consideraba una ni&ntilde;a feliz, pero desde que escuch&eacute; a mi amiga Walka, ya no era la misma&#46;&#46;&#46;&rdquo;</b></b>
-
-
-    </div>
-    </div>
-
-    </div>
-     <div class="footer"></div>
+        <div class="footer"></div>
 
 
 
 
-<nav class="pushy pushy-left">
-    <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
-    </ul>
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
+            </ul>
 
-<nav>
+        </nav>
 
-<script>
+        <script>
 
-$(document).ready(function(){
+            $(document).ready(function(){
 
-$("#MenuIcon").click(function(){
+                $("#MenuIcon").click(function(){
 
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-    </script>
+                    $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
- <script src="js/pushy.min.js"></script>
+                });
+        </script>
 
 
-</body>
+        <script src="js/pushy.min.js"></script>
+
+
+    </body>
+</html>
