--- a/etapa_nazismo_ideologia.html
+++ b/etapa_nazismo_ideologia.html
@@ -65,10 +65,9 @@
                 </div>
                 <div class="textoSubEtapas2">
                     <b id="textoE11">En 1919 se fund&oacute; un movimiento popular llamado &ldquo;Partido Obrero Alem&aacute;n&rdquo;
-                        y  bajo el liderazgo de Adolf Hitler, sus miembros realizaron un golpe de Estado en Munich buscando la ca&iacute;da del gobierno. Tras fracasar, Hitler fue detenido y
-                        condenado a prisi&oacute;n.
+                        y bajo el liderazgo de Adolf Hitler sus miembros intentaron realizar un golpe de Estado en Munich buscando la ca&iacute;da del gobierno.
+                        Tras fracasar, Hitler fue detenido y condenado a prisi&oacute;n.
                     </b>
-
                 </div>
 
             </div>
@@ -105,7 +104,7 @@
                 <div class="textoSubEtapas2">
                     <b id="textoE11">Un objetivo central de la ideolog&iacute;a nazi era lograr una sociedad
                         alemana uniforme  sin otro mensaje que el hitlerista, sin otra ideolog&iacute;a
-                        que la nazi y sin otra raza que la aria.</b>
+                        que la nazi y sin otra &quot;raza&quot; que la aria.</b>
                 </div>
 
             </div>
@@ -121,8 +120,9 @@
                     <a href="etapadesp_ascensonazismo.html"> <b class="etapa1" id="tituloE1">ASCENSO DEL NAZISMO AL PODER<br></b></a>
                 </div>
                 <div class="textoSubEtapas2">
-                    <b id="textoE11">Con el tiempo,el Partido Nazi fue ganando m&aacute;s seguidores, transform&aacute;ndose as&iacute; en una de las principales fuerzas pol&iacute;ticas de Alemania. Una vez en el poder, Adolf Hitler realiz&oacute; lo necesario para gobernar sin el Parlamento y la oposici&oacute;n.
-                        <br></b>
+                    <b id="textoE11">Con el tiempo, el Partido Nazi fue ganando m&aacute;s seguidores, transform&aacute;ndose as&iacute; en una de las principales fuerzas pol&iacute;ticas de Alemania. Una vez en el poder, Adolf Hitler realiz&oacute; lo necesario para gobernar sin el Parlamento y la oposici&oacute;n.
+                        <br>
+                    </b>
                 </div>
 
             </div>
