--- a/anaVinocur_etapa1.html
+++ b/anaVinocur_etapa1.html
@@ -8,123 +8,116 @@
         <link href="fonts/stylesheet.css" rel="stylesheet" />
         <link href="Styles/styleAnasDesplegadas.css" rel="stylesheet" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-         <link rel="stylesheet" href="css/pushy.css">
-         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <link rel="stylesheet" href="css/pushy.css">
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <!-- Modernizr -->
         <script src="js/vendor/modernizr.custom.71422.js"></script>
         <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script-->
         <!--script src="js/jquery-1.11.0.min.js"></script-->
-<script src="js/lightbox.min.js"></script>
+        <script src="js/lightbox.min.js"></script>
         <link href="css/lightbox.css" rel="stylesheet" />
-<!-- Start VideoLightBox.com HEAD section -->
-		<link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
+        <!-- Start VideoLightBox.com HEAD section -->
+        <link rel="stylesheet" href="etapas_desp_videolb/videolightbox.css" type="text/css" />
 
-			<link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
-			<!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
-			<script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
-		<!-- End VideoLightBox.com HEAD section --></head>
+        <link rel="stylesheet" type="text/css" href="etapas_desp_videolb/overlay-minimal.css"/>
+        <!--script src="etapas_desp_videolb/jquery.js" type="text/javascript"></script-->
+        <script src="etapas_desp_videolb/swfobject.js" type="text/javascript"></script>
+        <!-- End VideoLightBox.com HEAD section --></head>
 
-<body>
+    <body>
 
 
- <div id="cont-header">
+        <div id="cont-header">
 
-        <header id="encabezado">
+            <header id="encabezado">
                 <a href="index.html" ><img id="Logo" src="Header/Logo.png"/> </a>
                 <b id="TextMenu" >MENU</b>
-                <img id="MenuIcon" src="Header/menu_icon.png" />
+                <img id="MenuIcon" src="Header/menu_icon.png"/>
 
+            </header>
+        </div>
+        <div class="FondoAnaFrank">
+            <img src="fotosAnaCollage/annefrank1.png">
+        </div>
 
+        <div id="container">
+            <div class="Etapa1">
+                <div class="Nombre">
+                    <b>ANA VINOCUR</b>
+                    <div id="btnVolver">
+                        <a href="etapa_nazismo_ideologia.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
+                    </div>
+                </div>
+                <div id="ImagenPrincipal">
+                    <img src="EtapaAnas/etapa1_imggrande.png">
 
+                </div>
+                <div id="FondoTexto" class="etapa1texto">
+                    <div id="DescripcionImagen"><br><br><br>Ana y Enrique</div>
+                </div>
 
-
-        </header>
-     </div>
-    <div class="FondoAnaFrank">
-        <img src="fotosAnaCollage/annefrank1.png">
-    </div>
-
-    <div id="container">
-        <div class="Etapa1">
-        <div class="Nombre">
-            <b>ANA VINOCUR</b>
-            <div id="btnVolver">
-              <a href="etapa_nazismo_ideologia.html">  <img src="fotosAnaCollage/boton_volver.png"> </a>
+                <div id="ImagenPequena">
+                    <img id="foto" src="EtapaAnas/etapa1_circulo.png">
+                    <div id="DivDescr">
+                        <div id="Descr"> Los padres de Ana</div>
+                    </div>
+                </div>
+                <div id="Texto">
+                    <b id="Titulo"></b>
+                    <b class="hechos">Ana Benkel de Vinocur naci&oacute; el 25 de setiembre de 1926 en Lodz, Polonia.<br>
+                        Su familia estaba compuesta por cuatro personas:
+                        su padre, Henoj Wolf Benkel;
+                        su madre, Rivka Bocian;
+                        su hermano mayor, Hersheck &#40;Enrique&#41;;
+                        y su hermanito menor, Leibush.
+                        Eran una familia feliz de jud&iacute;os observantes  de clase media.<br><br>
+                        Ten&iacute;a una voz privilegiada y le encantaba cantar como solista en el coro de la escuela y aprender a tocar el piano.
+                        Lodz era una ciudad industrial, por eso en las vacaciones la familia viajaba en un carro tirado por caballos para descansar en el campo.
+                        Ana disfrutaba del juego con los animales de granja, del aire puro y fresco, de la armon&iacute;a familiar y de la libertad.
+                        <br></b>
+                </div>
+                <div id="Seccion1">
+                </div>
+                <div id="Explicacion">
+                    <b id="TextoGrande">&ldquo;&#46;&#46;&#46;Se ve gente asustada. De muchos hogares salen muchachos para alistarse en el ej&eacute;rcito. Los jud&iacute;os tambi&eacute;n se alistan. La gente se despide con angustia. Todos caminan, corren y hasta las hojas de los &aacute;rboles se quieren escapar m&aacute;s r&aacute;pido&#46;&#46;&#46;&rdquo;
+                        <br></b>
+                </div>
+                <div id="Explicacion2">
+                    <b id="Autor"> <br></b>
+                </div>
+                <div id="Seccion2">
+                </div>
             </div>
         </div>
-        <div id="ImagenPrincipal">
-            <img src="EtapaAnas/etapa1_imggrande.png">
-
-        </div>
-        <div id="FondoTexto" class="etapa1texto">
-            <div id="DescripcionImagen"><br><br><br>Ana y Enrique</div>
-        </div>
-
-        <div id="ImagenPequena">
-            <img id="foto" src="EtapaAnas/etapa1_circulo.png">
-            <div id="DivDescr">
-            <div id="Descr"> Los padres de Ana</div>
-            </div>
-        </div>
-        <div id="Texto">
-            <b id="Titulo"></b>
-            <b class="hechos">Ana Benkel de Vinocur naci&oacute; el 25 de setiembre de 1926 en Lodz, Polonia.<br>
-Su familia estaba compuesta por cuatro personas,
-su padre, Henoj Wolf Benkel,
-su madre, Rivka Bocian,
-su hermano mayor, Hersheck &#40;Enrique&#41;
-y su hermanito menor, Leibush.
-Eran una familia feliz de jud&iacute;os observantes  de clase media.<br><br>
-Ten&iacute;a una voz privilegiada y le encantaba cantar como solista en el coro de la escuela y aprender a tocar el piano.
-Lodz era una ciudad industrial, por eso en las vacaciones la familia viajaba en un carro tirado por caballos para descansar en el campo.
-Ana disfrutaba del juego con los animales de granja, del aire puro y fresco, de la armon&iacute;a familiar y de la libertad.
-
-<br></b>
-
-
-        </div>
-        <div id="Seccion1">
-        </div>
-        <div id="Explicacion">
-            <b id="TextoGrande">&ldquo;&#46;&#46;&#46;Se ve gente asustada. De muchos hogares salen muchachos para alistarse en el ej&eacute;rcito. Los jud&iacute;os tambi&eacute;n se alistan. La gente se despide con angustia. Todos caminan, corren y hasta las hojas de los &aacute;rboles se quieren escapar m&aacute;s r&aacute;pido&#46;&#46;&#46;&rdquo;
- <br></b>
-        </div>
-        <div id="Explicacion2">
-            <b id="Autor"> <br></b>
-        </div>
-        <div id="Seccion2">
-        </div>
-        </div>
-        </div>
-     <div class="footer"></div>
+        <div class="footer"></div>
 
 
 
 
-<nav class="pushy pushy-left">
-    <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="actividades.html">Actividades</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="perfil.html">Mi Perfil</a></li>
-    </ul>
+        <nav class="pushy pushy-left">
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="actividades.html">Actividades</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="perfil.html">Mi Perfil</a></li>
+            </ul>
 
-<nav>
+            <nav>
 
-<script>
+                <script>
 
-$(document).ready(function(){
+                    $(document).ready(function(){
 
-$("#MenuIcon").click(function(){
+                        $("#MenuIcon").click(function(){
 
-       $("#menu").animate({width:'toggle'},{speed:"slow"},350);
-
-
-  });
-    </script>
+                            $("#menu").animate({width:'toggle'},{speed:"slow"},350);
 
 
- <script src="js/pushy.min.js"></script>
+                        });
+                </script>
+
+
+                <script src="js/pushy.min.js"></script>
 
 
 
@@ -136,4 +129,4 @@ $("#MenuIcon").click(function(){
 
 
 
-</body>
+                </body>
